--- a/home.css
+++ b/home.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #000000;
 }
 
 .logo {
@@ -28,8 +29,8 @@ header .navigation {
   text-align: center;
 }
 
-.nav-link:hover {
-  color: red;
+.navigation ul li:hover {
+  background-color: #312c2c;
 }
 
 .nav-link {
@@ -38,10 +39,6 @@ header .navigation {
 
 .nav-list {
   width: 10vw;
-}
-
-.nav-link:visited {
-  text-decoration: underline;
 }
 
 .footer {
@@ -55,12 +52,11 @@ header .navigation {
 .footer ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* background-color: saddlebrown; */
+  grid-template-columns: repeat(3, 33%);
+  padding: 0;
 }
 
 .footer ul li {
-  /* background-color: red; */
   text-align: center;
 }
 
@@ -68,10 +64,6 @@ header .navigation {
   text-decoration: none;
 }
 
-.footer-link:hover {
-  color: red;
-}
-
-.footer-link:visited {
-  text-decoration: underline;
+.footer ul li:hover {
+  background-color: #312c2c;
 }
