--- a/views/student_portal.ejs
+++ b/views/student_portal.ejs
@@ -6,7 +6,7 @@
   <div class="MainBody">
     <div class="SideNavigationBar">
       <div class="ImageWrap">
-        <img src="IIIT_logo_dark.png" height="50px">
+        <img src="assets/IIIT_logo_dark.png" height="50px">
         </img>
       </div>
       <div class="SubSideNavigationBar">
@@ -33,7 +33,7 @@
           <div class="HeaderIconDiv"><i class="material-icons">settings</i></div>
           <div class="HeaderIconDiv"><i class="material-icons">notifications</i></div>
           <div class="ProfilePicDiv">
-            <img src="profile_pic.png" height="100%">
+            <img src="assets/profile_pic.png" height="100%">
           </div>
           <div class="HeaderIconDiv" style="margin: 0px"><i class="material-icons">keyboard_arrow_down</i></div>
         </div>
