--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -38,7 +38,7 @@
       <h1 style="color: blue">Hello, Vishnu!<br>
         Welcome Back!
       </h1>
-      <img src="man_with_laptop.png" height="150px">
+      <img src="assets/man_with_laptop.png" height="150px">
     </div>
     <div style="background-color: lightpink; padding: 0px 30px; height: 100px; width: calc(100% - 60px); justify-content: flex-start;">
       <i class="material-icons" style="color: white; align-self: center; font-size: 60px;">done_all</i>
