--- a/public/css/student_portal.css
+++ b/public/css/student_portal.css
@@ -4,29 +4,31 @@ html {
 }
 
 body {
-  padding: 40px;
+  height: calc(100% - 50px);
+  width: calc(100% - 10px);
   background-color: black;
 }
 
 .MainBody {
   background-color: #202020;
   display: flex;
-  height: calc(100% - 20px);
-  width: calc(100% - 40px);
+  min-height: calc(100% - 90px);
+  width: calc(100% - 110px);
   padding: 10px 20px;
   border-radius: 1em;
+  margin: 35px;
 }
 
 .SideNavigationBar {
   background-color: #909090;
+  position: fixed;
   display: flex;
   border-radius: 1em;
-  height: calc(100% - 3em);
+  min-height: calc(50% - 3em);
   width: 60px;
   padding: 1.5em 0px;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 20px;
 }
 
 .ImageWrap {
@@ -129,6 +131,7 @@ body {
 .RightBodyDiv {
   display: flex;
   flex-direction: column;
+  margin-left: 80px;
   height: 100%;
   width: 100%;
   /* background-color: saddlebrown; */
