--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -35,17 +35,39 @@
 <div style="display: flex; width: 100%; justify-content: space-between;">
   <div class="LeftContainer">
     <div>
-      <h1 style="color: blue">Hello, Vishnu!<br>
+      <h1 style="color: blue;">
+        Hello, <%=f_name%>!<br />
         Welcome Back!
       </h1>
-      <img src="man_with_laptop.png" height="150px">
+      <img src="man_with_laptop.png" height="150px" />
     </div>
-    <div style="background-color: lightpink; padding: 0px 30px; height: 100px; width: calc(100% - 60px); justify-content: flex-start;">
-      <i class="material-icons" style="color: white; align-self: center; font-size: 60px;">done_all</i>
-      <h2 style="margin-left: 50px; color: red">No assignments <br>
-      due for today!</h2>
+    <div
+      style="
+        background-color: lightpink;
+        padding: 0px 30px;
+        height: 100px;
+        width: calc(100% - 60px);
+        justify-content: flex-start;
+      "
+    >
+      <i
+        class="material-icons"
+        style="color: white; align-self: center; font-size: 60px;"
+        >done_all</i
+      >
+      <h2 style="margin-left: 50px; color: red;">
+        No assignments <br />
+        due for today!
+      </h2>
     </div>
-    <div style="background-color: sandybrown; flex-direction: column; height: 200px; margin-bottom: 0px;">
+    <div
+      style="
+        background-color: sandybrown;
+        flex-direction: column;
+        height: 200px;
+        margin-bottom: 0px;
+      "
+    >
       <h2 style="align-self: center;">
         College News
       </h2>
@@ -53,7 +75,7 @@
   </div>
   <div class="RightContainer">
     <div>
-      <h2 style="align-self: center">
+      <h2 style="align-self: center;">
         Upcoming Events!
       </h2>
     </div>
