--- a/views/student_portal_pages/page[1].ejs
+++ b/views/student_portal_pages/page[1].ejs
@@ -4,7 +4,7 @@
     <h3 style="align-self: center">ATTENDANCE</h3>
   </div>
   <div class="ElementsContainer" style="height: 100px; background-color: tan;">
-    <h3 style="align-self: center">INDEX</h3>
+    <h3 style="align-self: center">GRADES</h3>
   </div>
   <div class="ElementsContainer" style=" background-color: teal;">
     <h3 style="align-self: center;">DATASHEET</h3>
