--- a/views/student_portal_pages/page[2].ejs
+++ b/views/student_portal_pages/page[2].ejs
@@ -15,7 +15,7 @@
 
     .GridContainer {
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: auto auto auto auto;
         gap: 10px;
     }
 
@@ -33,7 +33,7 @@
             <h2>Administration</h2>
         </div>
         <div class="GridContainer">
-            <% for(var i = 0; i < 9; i++) {%>
+            <% for(var i = 0; i < 12; i++) {%>
             <div></div>
             <% } %>
         </div>
@@ -43,7 +43,7 @@
             <h2>Faculty</h2>
         </div>
         <div class="GridContainer">
-            <% for(var i = 0; i < 9; i++) {%>
+            <% for(var i = 0; i < 12; i++) {%>
             <div></div>
             <% } %>
         </div>
