--- a/public/css/student_portal.css
+++ b/public/css/student_portal.css
@@ -22,9 +22,15 @@ body {
 .SideNavigationBar {
   background-color: #909090;
   position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 55px;
   display: flex;
   border-radius: 1em;
+  margin-top: auto;
+  margin-bottom: auto;
   min-height: calc(50% - 3em);
+  max-height: 400px;
   width: 60px;
   padding: 1.5em 0px;
   flex-direction: column;
