--- a/public/css/student_portal.css
+++ b/public/css/student_portal.css
@@ -1,3 +1,5 @@
+@import "colors.css";
+
 html {
   padding: 0px;
   height: 100%;
@@ -6,11 +8,16 @@ html {
 body {
   height: calc(100% - 90px);
   width: calc(100% - 10px);
-  background-color: #121212;
+  background-color: var(--background);
+}
+
+h3 {
+  margin: 0;
+  color: var(--secondary);
 }
 
 .MainBody {
-  background-color: #121212;
+  background-color: var(--background);
   display: flex;
   min-height: calc(100% - 90px);
   width: calc(100% - 110px);
@@ -18,12 +25,12 @@ body {
   border-radius: 1em;
   margin-left: 35px;
   margin-right: 35px;
-  margin-top: 55px;
+  margin-top: 100px;
   margin-bottom: 0px;
 }
 
 .SideNavigationBar {
-  background-color: #909090;
+  background-color: var(--sidebar);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -37,6 +44,7 @@ body {
   width: 60px;
   padding: 1.5em 0px;
   flex-direction: column;
+  z-index: 2;
   justify-content: space-between;
 }
 
@@ -70,7 +78,7 @@ body {
   top: -1em;
   height: 1em;
   width: 1em;
-  background-color: #121212;
+  background-color: var(--background);
 }
 
 .SelectedPortion {
@@ -79,7 +87,7 @@ body {
   height: calc(100% - 1em);
   width: 90%;
   align-self: flex-end;
-  background-color: #121212;
+  background-color: var(--background);
   border-top-left-radius: 1em;
   border-bottom-left-radius: 1em;
   /* z-index: calc(inherit + 2); */
@@ -92,7 +100,7 @@ body {
   width: 1em;
   right: 0;
   bottom: -1em;
-  background-color: #121212;
+  background-color: var(--background);
 }
 
 .SelectedPortion div::before {
@@ -103,7 +111,7 @@ body {
   border-bottom-right-radius: 1em;
   top: -1em;
   right: 0;
-  background-color: #909090;
+  background-color: var(--sidebar);
 }
 
 .SelectedPortion div {
@@ -122,7 +130,7 @@ body {
   bottom: -1em;
   right: 0;
   z-index: 2;
-  background-color: #909090;
+  background-color: var(--sidebar);
 }
 
 .IconWrap {
@@ -143,13 +151,21 @@ body {
   margin-left: 80px;
   height: 100%;
   width: 100%;
-  /* background-color: saddlebrown; */
+  /* background-color: var(--background); */
 }
 
-.Header {
+.HeaderWrap{
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  height: 100px;
+  background-color: var(--background);
+}
+
+.Header {
   display: flex;
   width: calc(100% - 185px);
   min-height: 40px;
@@ -157,14 +173,13 @@ body {
   margin-right: 35px;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-bottom: 30px;
   align-self: center;
   justify-content: space-between;
-  background-color: #121212;
+  background-color: var(--background);
 }
 
 .SearchBar {
-  background-color: #505050;
+  background-color: var(--search);
   border-radius: 3em;
   display: flex;
   padding-left: 10px;
@@ -187,7 +202,7 @@ i:hover {
   width: 35px;
   margin-left: 30px;
   padding: 5px;
-  background-color: #303030;
+  background-color: var(--inactive);
 }
 
 .ElementsContainer {
@@ -195,7 +210,7 @@ i:hover {
   flex-direction: column;
   border-radius: 1em;
   padding: 10px 0px;
-  background-color: wheat;
+  background-color: var(--primary);
   margin-bottom: 20px;
   width: 100%;
 }
