--- a/views/student_portal_pages/page[4].ejs
+++ b/views/student_portal_pages/page[4].ejs
@@ -21,22 +21,18 @@
         z-index: 11;
         border-radius: 1em;
         padding: 10px;
-        background-color: sandybrown;
+        background-color: var(--primary);
     }
 
     .Button {
         border-radius: 1em;
         padding: 10px 20px;
-        background-color: lightgreen;
+        background-color: var(--primary2);
         text-align: center;
     }
 
     .Button:hover {
         cursor: pointer;
-    }
-
-    h3 {
-        margin: 0;
     }
 </style>
 <div class="MyModal">
