--- a/views/student_portal_pages/page[1].ejs
+++ b/views/student_portal_pages/page[1].ejs
@@ -3,10 +3,10 @@
   <div class="ElementsContainer" style="height: 150px;">
     <h3 style="align-self: center">ATTENDANCE</h3>
   </div>
-  <div class="ElementsContainer" style="height: 100px; background-color: tan;">
+  <div class="ElementsContainer" style="height: 100px; background-color: var(--primary);">
     <h3 style="align-self: center">GRADES</h3>
   </div>
-  <div class="ElementsContainer" style=" background-color: teal;">
+  <div class="ElementsContainer" style=" background-color: var(--primary);">
     <h3 style="align-self: center;">DATASHEET</h3>
   </div>
 </div>
