--- a/views/student_portal_pages/page[3].ejs
+++ b/views/student_portal_pages/page[3].ejs
@@ -5,14 +5,16 @@
         width: 100%;
         border-radius: 1em;
         height: 300px;
+        padding-top: 10px;
         margin-bottom: 20px;
+        background-color: var(--primary);
     }
 </style>
 <div style="display: flex; flex-direction: column; width: 100%; padding: 10px 0px">
-    <div class="Element" style="background-color: lightskyblue;">
-        <h2 style="color: #202020; align-self: center;">Class Schedule</h2>
+    <div class="Element">
+        <h3 style="align-self: center;">Class Schedule</h3>
     </div>
-    <div class="Element" style="background-color: lightgreen; margin-bottom: 0px;">
-        <h2 style="color: #202020; align-self: center;">Academic Calendar</h2>
+    <div class="Element" style="margin-bottom: 0px;">
+        <h3 style="align-self: center;">Academic Calendar</h3>
     </div>
 </div>
