--- a/views/student_edit.ejs
+++ b/views/student_edit.ejs
@@ -6,10 +6,175 @@
     <title>Student Edit</title>
   </head>
   <body>
+    <!-- Roll No. -->
     <form action="./student_edit" method="POST">
-      <label for="roll_no">
-        <input type="text" placeholder="20XXYYYZZZ" name="roll_no" required />
+      <label for="category">
+        <input
+          type="text"
+          value="roll"
+          name="category"
+          style="display: none;"
+        />
       </label>
+      <label for="roll_no">
+        <input type="text" value="<%=roll_no%>" name="roll_no" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Name -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="name"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="f_name">
+        <input type="text" value="<%=f_name%>" name="f_name" required />
+      </label>
+      <label for="m_name">
+        <input type="text" value="<%=m_name%>" name="m_name" required />
+      </label>
+      <label for="l_name">
+        <input type="text" value="<%=l_name%>" name="l_name" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Batch & Branch -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="batch"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="batch_code">
+        <input type="text" value="<%=batch_code%>" name="batch_code" required />
+      </label>
+      <p><%=branch_id%></p>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Gender & DOB -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="gender"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="gender">
+        <input type="text" value="<%=gender%>" name="gender" required />
+      </label>
+      <label for="dob">
+        <input type="text" value="<%=dob%>" name="dob" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- CGPA & Semester -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="cgpa"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="cgpa">
+        <input type="text" value="<%=cgpa%>" name="cgpa" required />
+      </label>
+      <label for="semester">
+        <input type="text" value="<%=semester%>" name="semester" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Room Details -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="room"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="hostel_no">
+        <input type="text" value="<%=hostel_no%>" name="hostel_no" required />
+      </label>
+      <label for="room">
+        <input type="text" value="<%=room%>" name="room" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Subjects -->
+    <!-- <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="subjects"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="number">
+        <input
+          type="text"
+          value="<%=subjects.lenth%>"
+          name="number"
+          style="display: none;"
+        />
+      </label>
+      <% for(let i=0; i<subjects.length; i++) { %>
+      <label for="subject<%=i%>">
+        <input
+          type="text"
+          value="<%=subjects[i]%>"
+          name="subject<%=i%>"
+          required
+        />
+      </label>
+      <% } %>
+      <button type="submit">SUBMIT</button>
+    </form> -->
+
+    <!-- Backlogs -->
+    <form action="./student_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="backlogs"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="number">
+        <input
+          type="text"
+          value="<%=backlogs.lenth%>"
+          name="number"
+          style="display: none;"
+        />
+      </label>
+      <% if(backlogs.length != 0) { %>
+        <% for(let i=0; i<backlogs.length; i++) {%>
+        <label for="backlog<%=i%>">
+          <input type="text" value="<%=backlogs[i]%>" name="backlogs[]" required />
+          <!-- https://stackoverflow.com/questions/9073690/post-an-array-from-an-html-form-without-javascript -->
+        </label>
+        <% } %>
+      <% } %>
       <button type="submit">SUBMIT</button>
     </form>
   </body>
