--- a/views/admin_edit.ejs
+++ b/views/admin_edit.ejs
@@ -5,5 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Edit</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Admin id -->
+    <form action="./admin_edit" method="POST">
+      <label for="category">
+        <input type="text" value="id" name="category" style="display: none;" />
+      </label>
+      <label for="admin_id">
+        <input type="text" value="<%=admin_id%>" name="admin_id" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Name -->
+    <form action="./admin_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="name"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="f_name">
+        <input type="text" value="<%=f_name%>" name="f_name" required />
+      </label>
+      <label for="m_name">
+        <input type="text" value="<%=m_name%>" name="m_name" required />
+      </label>
+      <label for="l_name">
+        <input type="text" value="<%=l_name%>" name="l_name" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Phone & E-mail -->
+    <form action="./admin_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="phone"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="phone">
+        <input type="text" value="<%=phone%>" name="phone" required />
+      </label>
+      <label for="Email">
+        <input type="text" value="<%=Email%>" name="Email" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
+    <!-- Photo -->
+    <!-- <form action="./admin_edit" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="photo"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="gender">
+        <input type="text" value="<%=gender%>" name="gender" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form> -->
+  </body>
 </html>
