Connected Student login and Student Portal

--- a/views/student_portal_pages/page[4].ejs
+++ b/views/student_portal_pages/page[4].ejs
@@ -39,9 +39,9 @@
     <div class="ModalContent">
         <h2>Are you sure you want to logout?</h2>
         <div style="display: flex;">
-            <!-- Enter Link for Yes here -->
-            <div class="Button" style="margin-right: 20px;" onclick=changeToLastSelection()><h3>Yes</h2></div>
+            <a href="./logout"><div class="Button" style="margin-right: 20px;"><h3>Yes</h2></div></a>
             <div class="Button" onclick="changeToLastSelection()"><h3>No</h3></div>
+            
         </div>
     </div>
 </div>
