--- a/views/student_portal.ejs
+++ b/views/student_portal.ejs
@@ -6,7 +6,7 @@
 <body>
   <div class="SideNavigationBar">
     <div class="ImageWrap">
-      <img src="assets/IIIT_logo_dark.png" height="50px">
+      <img src="/assets/IIIT_logo_dark.png" height="50px">
       </img>
     </div>
     <div class="SubSideNavigationBar">
@@ -36,7 +36,7 @@
             <div class="HeaderIconDiv"><i class="material-icons">notifications</i></div>
             <!-- Profile pic is here -->
             <div class="ProfilePicDiv">
-              <img src="assets/profile_pic.png" height="100%">
+              <img src="<%=photo%>" height="100%">
             </div>
             <div class="HeaderIconDiv" style="margin: 0px"><i class="material-icons">keyboard_arrow_down</i></div>
           </div>
