--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -39,7 +39,7 @@
         Hello, <%=f_name%>!<br />
         Welcome Back!
       </h1>
-      <img src="assets/man_with_laptop.png" height="150px">
+      <img src="/assets/man_with_laptop.png" height="150px" />
     </div>
     <div
       style="
@@ -56,7 +56,7 @@
         >done_all</i
       >
       <h2 style="margin-left: 50px; color: var(--secondary);">
-        No assignments <br />
+        <%=assignment_number%> <br />
         due for today!
       </h2>
     </div>
@@ -68,14 +68,14 @@
         margin-bottom: 0px;
       "
     >
-      <h2 style="align-self: center; color: var(--secondary)">
+      <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
     </div>
   </div>
   <div class="RightContainer">
     <div>
-      <h2 style="align-self: center; color: var(--secondary)">
+      <h2 style="align-self: center; color: var(--secondary);">
         Upcoming Events!
       </h2>
     </div>
