--- a/public/css/home.css
+++ b/public/css/home.css
@@ -68,7 +68,7 @@ body{
 	top: 50%;
 	position: absolute;
 	left: 0;
-	right:0; 
+	right:0;
 	box-sizing: border-box;
 	z-index: 2;
 }
@@ -113,6 +113,6 @@ body{
 @media screen and (max-width: 32rem){
 	.col{
 		width: 100%;
-		margin: 0 0 2rem 0;
+		margin: 0 0 2rem;
 	}
 }
