Removed all errors in admin portal and in student portal (sorry for the latter)

--- a/views/admin_edit.ejs
+++ b/views/admin_edit.ejs
@@ -36,7 +36,7 @@
       <label for="l_name">
         <input type="text" value="<%=l_name%>" name="l_name" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit" formnovalidate>SUBMIT</button>
     </form>
 
     <!-- Phone & E-mail -->
