--- a/views/faculty_edit.ejs
+++ b/views/faculty_edit.ejs
@@ -36,7 +36,7 @@
       <label for="l_name">
         <input type="text" value="<%=l_name%>" name="l_name" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit" formnovalidate>SUBMIT</button>
     </form>
 
     <!-- Post & Branch -->
@@ -72,7 +72,7 @@
         <input type="text" value="<%=gender%>" name="gender" required />
       </label>
       <label for="dob">
-        <input type="text" value="<%=dob%>" name="dob" required />
+        <input type="datetime" value="<%=dob%>" name="dob" required />
       </label>
       <button type="submit">SUBMIT</button>
     </form>
