--- a/views/admin_edit.ejs
+++ b/views/admin_edit.ejs
@@ -7,16 +7,7 @@
   </head>
   <body>
     <!-- Admin id -->
-    <form action="./admin_edit" method="POST">
-      <label for="category">
-        <input type="text" value="id" name="category" style="display: none;" />
-      </label>
-      <label for="admin_id">
-        <input type="text" value="<%=admin_id%>" name="admin_id" required />
-      </label>
-      <button type="submit">SUBMIT</button>
-    </form>
-
+    <p><%=admin_id%></p>
     <!-- Name -->
     <form action="./admin_edit" method="POST">
       <label for="category">
