--- a/views/faculty_edit.ejs
+++ b/views/faculty_edit.ejs
@@ -7,15 +7,7 @@
   </head>
   <body>
     <!-- Faculty id -->
-    <form action="./faculty_edit" method="POST">
-      <label for="category">
-        <input type="text" value="id" name="category" style="display: none;" />
-      </label>
-      <label for="faculty_id">
-        <input type="text" value="<%=faculty_id%>" name="faculty_id" required />
-      </label>
-      <button type="submit">SUBMIT</button>
-    </form>
+    <p><%=faculty_id%></p>
 
     <!-- Name -->
     <form action="./faculty_edit" method="POST">
