--- a/views/student_edit.ejs
+++ b/views/student_edit.ejs
@@ -7,20 +7,7 @@
   </head>
   <body>
     <!-- Roll No. -->
-    <form action="./student_edit" method="POST">
-      <label for="category">
-        <input
-          type="text"
-          value="roll"
-          name="category"
-          style="display: none;"
-        />
-      </label>
-      <label for="roll_no">
-        <input type="text" value="<%=roll_no%>" name="roll_no" required />
-      </label>
-      <button type="submit">SUBMIT</button>
-    </form>
+    <%=roll_no%>
 
     <!-- Name -->
     <form action="./student_edit" method="POST">
