--- a/views/admin_portal.ejs
+++ b/views/admin_portal.ejs
@@ -10,6 +10,7 @@
     <button onclick="faculty_edit()" id="faculty">Faculty</button>
     <button onclick="admin_edit()" id="admin">Admin</button>
     <button onclick="club_edit()" id="club">Club</button>
+    <button onclick="research_edit()" id="research">Research</button>
 
     <!-- Student -->
     <form
@@ -95,6 +96,27 @@
       <button type="submit">SUBMIT</button>
     </form>
 
+    <!-- Research -->
+    <form
+      action="./admin_portal"
+      method="POST"
+      id="research_form"
+      style="display: none;"
+    >
+      <label for="category">
+        <input
+          type="text"
+          value="research"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <label for="id">
+        <input type="text" placeholder="20XXYYYZZZ" name="id" required />
+      </label>
+      <button type="submit">SUBMIT</button>
+    </form>
+
     <script>
       function student_edit() {
         document.getElementById("student_form").style.display = "block";
@@ -108,6 +130,7 @@
         document.getElementById("student").style.display = "none";
         document.getElementById("admin").style.display = "none";
         document.getElementById("club").style.display = "none";
+        document.getElementById("research").style.display = "none";
       }
 
       function admin_edit() {
@@ -115,6 +138,7 @@
         document.getElementById("faculty").style.display = "none";
         document.getElementById("student").style.display = "none";
         document.getElementById("club").style.display = "none";
+        document.getElementById("research").style.display = "none";
       }
 
       function club_edit() {
@@ -122,6 +146,15 @@
         document.getElementById("student").style.display = "none";
         document.getElementById("faculty").style.display = "none";
         document.getElementById("admin").style.display = "none";
+        document.getElementById("research").style.display = "none";
+      }
+
+      function research_edit() {
+        document.getElementById("research_form").style.display = "block";
+        document.getElementById("student").style.display = "none";
+        document.getElementById("faculty").style.display = "none";
+        document.getElementById("admin").style.display = "none";
+        document.getElementById("club").style.display = "none";
       }
     </script>
   </body>
