--- a/views/club_edit.ejs
+++ b/views/club_edit.ejs
@@ -7,15 +7,7 @@
   </head>
   <body>
     <!-- Club Id -->
-    <form action="./club_edit" method="POST">
-        <label for="category">
-            <input type="text" value="id" name="category" style="display: none;" />
-        </label>
-        <label for="club_id">
-            <input type="text" value="<%=club_id%>" name="club_id" required />
-        </label>
-        <button type="submit">SUBMIT</button>
-    </form>
+    <p><%=club_id%></p>
     
     <!-- Name -->
     <form action="./club_edit" method="POST">
