Removed typos which were typos

--- a/views/student_edit.ejs
+++ b/views/student_edit.ejs
@@ -132,7 +132,7 @@
       <label for="number">
         <input
           type="text"
-          value="<%=subjects.lenth%>"
+          value="<%=subjects.length%>"
           name="number"
           style="display: none;"
         />
