--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Olly</title>
-    <link rel="stylesheet" href="/css/student_portal.css" />
+    <link rel="stylesheet" href="/css/admin_portal.css">
+<!--     <link rel="stylesheet" href="/css/student_portal.css" /> -->
   </head>
   <body>
     <%-body%>
